feat: package build

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,11 @@ Title: easylift: An R package to perform genomic liftOver
 Version: 0.0.1
 Authors@R: 
     c(
-    person("Abdullah", "Al Nahid", , "abdnahid56@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-4390-0768"))
-    person("Michael", "Love", email = "milove@email.unc.edu",
-    role = c("aut", "cre"), comment = c(ORCID = "0000-0001-8401-0545"))
+    person("Abdullah", "Al Nahid", , "abdnahid56@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4390-0768")), person("Michael", "Love", email = "milove@email.unc.edu", role = c("aut", "rev"), comment = c(ORCID = "0000-0001-8401-0545"))
     )
 Description: The package performs genomic liftover given genomicRanges and chain file.
 License: MIT + file LICENSE
+URL: https://github.com/nahid18/easylift
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
