--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,9 @@ Imports:
 Suggests: 
     testthat (>= 3.0.0),
     GenomicRanges,
-    IRanges
+    IRanges,
+    knitr,
+    BiocStyle,
+    rmarkdown
 Config/testthat/edition: 3
+VignetteBuilder: knitr
