--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: easylift
 Title: An R package to perform genomic liftover
-Version: 0.0.4
+Version: 0.0.5
 Date: 2023-08-05
 Authors@R: 
     c(
     person("Abdullah", "Al Nahid", email= "abdnahid56@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-4390-0768")), 
     person("Michael", "Love", email = "michaelisaiahlove@gmail.com", role = c("aut", "rev"), comment = c(ORCID = "0000-0001-8401-0545"))
     )
-Description: The package performs genomic liftover given genomicRanges and chain file.
+Description: The package performs genomic liftover different genome assemblies given GRanges, genome and chain file. If the chain file is cached with BiocFileCache, the chain file argument can be omitted.
 License: MIT + file LICENSE
 URL: https://github.com/nahid18/easylift, https://nahid18.github.io/easylift
 Encoding: UTF-8
@@ -28,3 +28,4 @@ Suggests:
     rmarkdown
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+biocViews: Workflow, BasicWorkflow
