--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ import(BiocFileCache)
 import(GenomeInfoDb)
 import(GenomicRanges)
 import(R.utils)
+import(methods)
 import(rtracklayer)
 import(tools)
